test_case/rust-lang_rust/92386_1013507194.rs
rust
#![deny(unused_lifetimes)]

pub trait Foo<'a> { //~ ERROR lifetime parameter `'a` never used
    fn foo(&self);
}

pub struct Bar {
    pub foo: u32,
}
